--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "ot_harjoitustyo"}]
 [tool.poetry.dependencies]
 python = "^3.8"
 invoke = "^2.0.0"
+customtkinter = "^5.1.2"
 
 
 [tool.poetry.group.dev.dependencies]
