--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "ot_harjoitustyo"}]
 python = "^3.8"
 invoke = "^2.0.0"
 customtkinter = "^5.1.2"
+ctkmessagebox = "^1.80"
 
 
 [tool.poetry.group.dev.dependencies]
